# Fish-Blast

./: .gitignore  CMakeLists.txt  LICENSE  README.md  icon.svg.import  project.godot
addons/gsom_console/: gsom_console.gd.uid  gsom_console_autoload.gd.uid
addons/gsom_console/nodes/: console.gd.uid  console.tscn
assets/textures/: cursor_idle.png.import  cursor_idle_scaled.png.import  player_still.png.import
autoload/camera_control/: camera_control.gd  camera_control.gd.uid  camera_control.tscn
autoload/debug_console/: debug_console.gd  debug_console.gd.uid  debug_console.tscn
autoload/time_control/: time_control.gd  time_control.gd.uid  time_control.tscn
cmake/: deps.cmake  gdext.in
items/fish_koi/: fish_koi.gd  fish_koi.gd.uid  fish_koi.tscn
items/fish_wiggler/: fish_wiggler.tscn
objects/camera_follow_target/: camera_follow_target.gd  camera_follow_target.gd.uid  camera_follow_target.tscn
objects/components/: README.txt
objects/fish_koi/: fish_koi.gd  fish_koi.tscn
objects/fish_wiggler/: fish_wiggler.gd  fish_wiggler.gd.uid  fish_wiggler.tscn
player/: charge_progress_bar.gd  charge_progress_bar.gd.uid  player.gd  player.gd.uid  player.tscn  player_buffered_input.gd  player_buffered_input.gd.uid
player/player_input/: player_input.gd  player_input.gd.uid
proto/: menu.gd  menu.gd.uid  menu.tscn  pause_menu.gd  pause_menu.gd.uid  pause_menu.tscn  proto.tscn  random_spawner.gd  random_spawner.gd.uid  spawn_table_entry.gd  spawn_table_entry.gd.uid
shaders/: pause_menu.gdshader.uid
src/: entry_main.ixx  main_menu.ixx  menus.ixx  player.ixx
(+8 files in other folders)
